<resources>
    <string name="app_name">Мой бюджет</string>
    <string name="tvEmail">Почта:</string>
    <string name="tvPassword">Пароль:</string>
    <string name="tvLogin">Вход в личный кабинет</string>
    <string name="btnLogin">Войти</string>
    <string name="tvLoginRegister"><u>Зарегистрироваться</u></string>
    <string name="tvUsername">Имя:</string>
    <string name="tvRegister">Регистрация</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="btnCancel">Отмена</string>
    <string name="msgSuccessRegister">Регистрация прошла успешно!</string>
    <string name="category_activity_label">Мои категории</string>
    <string name="subcategory_activity_label">Продукты</string>
    <string name="tvAccount">Название счета:</string>
    <string name="btnSave">Сохранить</string>
    <string name="tvAccountSum">Сумма:</string>
    <string name="tvCategoryName">Название категории:</string>
    <string name="tvSubcategoryName">Название подкатегории:</string>
    <string name="tvSubcategories">Мои подкатегории</string>
    <string name="btn_add_text">Добавить</string>

    <string-array name="categories">
        <item>Продукты</item>
        <item>Услуги ЖКХ</item>
        <item>Транспорт</item>
        <item>Образование</item>
        <item>Одежда</item>
        <item>Дом</item>
        <item>Развлечения</item>
    </string-array>

    <string-array name="subcategories">
        <item>Молоко</item>
        <item>Рис</item>
        <item>Гречка</item>
        <item>Масло</item>
        <item>Фарш говяжий</item>
    </string-array>
</resources>