<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical"
    tools:context=".EditingActivity">

    <TextView
        android:id="@+id/tvAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAccount"
        android:paddingVertical="10dp"/>

    <EditText
        android:id="@+id/etAccountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_border_text_view"
        android:paddingVertical="10dp"/>

    <TextView
        android:id="@+id/tvAccountSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAccountSum"
        android:paddingVertical="10dp"/>

    <EditText
        android:id="@+id/etAccountSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:background="@drawable/my_border_text_view"
        android:digits="0123456789."
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/color_gray"
            android:text="@string/btnCancel"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/light_blue_color"
            android:text="@string/btnSave"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
</LinearLayout>